# test_repository

./: build and install instructions  build.sh  meta.yaml  requirements.txt  setup.cfg  setup.py
src/my_test_pkg/: my_package.py
