[metadata]
# replace with your username:
name = my_test_pkg
version = 0.7.0
author = Filip Kovacevic
author_email = f.kovacevic@gmx.at
description = A short description
long_description = "a long description"
long_description_content_type = text/markdown
url = https://github.com/test_repository/test_repository
project_urls =
    Bug Tracker = https://github.com/GreenfishK/test_repository/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.package_data]
* = *.txt, *.sql, *.db

[options.packages.find]
where = src

[coverage:run]
branch = true
source =
    my_test_pkg

[coverage:paths]
source =
    my_test_pkg
    */site-packages

[mypy]
files = src/click
python_version = 3.8
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True