[metadata]
# replace with your username:
name = my_test_pkg
version = 0.7.0
author = Filip Kovacevic
author_email = f.kovacevic@gmx.at
description = A short description
long_description = "a long description"
long_description_content_type = text/markdown
url = https://github.com/test_repository/test_repository
project_urls =
    Bug Tracker = https://github.com/GreenfishK/test_repository/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
package_dirk =
    =src
include_package_data = false
python_requires = >=3.8

[options.packages.find]
where = src
include = my_test_pkg

#[options.package_data]
#* = *.txt, *.sql, *.db

#[options.data_files]
#/etc/my_package =
#    site.d/00_default.conf
#    host.d/00_default.conf
#data = data/img/logo.png, data/svg/icon.svg
